--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <li class="section-clients-item">
                         <p class="section-clients-testimonial">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error et quos molestiae
-                            cupiditate? Possimus id consequuntur aperiam, harum tempora assumenda illum unde quo
+                            cupiditate? id consequuntur aperiam, harum tempora assumenda illum unde quo
                             laboriosam dolores natus, officiis sit ipsum!
                         </p>
                         <div class="section-clients-user">
