--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lionic Legal Solution</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <header class="header">
-        <div class="conteiner">
+        <div class="conteiner header-conteiner">
             <a href="" class="logo">
                 <img src="/img/5.8 Lionic.psd.svg" alt="logo" class="logo-img">
             </a>
@@ -36,7 +38,7 @@
                     </li>
                 </ul>
             </nav>
-            <a href="" class="btn">
+            <a href="" class="btn header-btn">
                 FREE TRIAL
             </a>
         </div>
