--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="conteiner header-conteiner">
             <a href="" class="logo">
-                <img src="/img/5.8 Lionic.psd.svg" alt="logo" class="logo-img">
+                <img src="img/5.8 Lionic.psd.svg" alt="logo" class="logo-img">
             </a>
             <nav class="nav">
                 <ul class="nav-list">
@@ -46,28 +46,31 @@
 
     <main>
         <section class="section-hero">
-            <div class="conteiner">
-                <h1 class="section-hero-heading">
-                    This is simply a smarter way to make your legal online
-                </h1>
-                <p class="section-hero-description">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque reiciendis nam perspiciatis ipsum
-                </p>
-                <a href="" class="btn">
-                    FREE 30 DAYS TRIAL
-                </a>
-                <div class="section-hero-btn-description">
-                    <span class="section-hero-ssl-icon"></span>
-                    SSL SECURED CONECTED
+            <div class="conteiner hero-conteiner">
+                <div class="hero-content">
+                    <h1 class="section-hero-heading">
+                        This is simply a smarter way to make your legal online
+                    </h1>
+                    <p class="section-hero-description">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque reiciendis nam perspiciatis
+                        ipsum
+                    </p>
+                    <a href="" class="btn">
+                        FREE 30 DAYS TRIAL
+                    </a>
+                    <div class="section-hero-btn-description">
+                        <span class="section-hero-ssl-icon"></span>
+                        SSL SECURED CONECTED
+                    </div>
                 </div>
             </div>
         </section>
         <section class="section-do">
             <div class="conteiner">
-                <h2 class="section-heading">
+                <h2 class="section-heading text-center">
                     What we Do
                 </h2>
-                <p class="section-description">
+                <p class="section-description text-center">
                     Lionic guides you on making decisions for all aspects of your end-of-life plans.
                 </p>
                 <ul class="section-do-list">
@@ -159,7 +162,7 @@
                                 transform="translate(-1184 -1081)" />
                         </svg>
                         <strong class="section-do-item-heading">
-                            Legal & Finanlor em ipsumcial
+                            Legal & Financinal
                         </strong>
                         <p class="section-do-item-description">
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur labore dicta rerum
@@ -242,14 +245,14 @@
                 </h2>
                 <ul class="section-contacts-list">
                     <li class="section-contacts-item">
-                        <span class="section-contacts-icon"></span>
+                        <span class="section-contacts-icon section-contacts-icon-gps"></span>
                         <strong class="section-contacts-heading">Visit US</strong>
                         <div class="section-contacts-info">
                             Duis autem vel eum iriure dolor in hendrerit in vulputate velit.
                         </div>
                     </li>
                     <li class="section-contacts-item">
-                        <span class="section-contacts-icon"></span>
+                        <span class="section-contacts-icon section-contacts-icon-phone"></span>
                         <strong class="section-contacts-heading">Call US</strong>
                         <div class="section-contacts-info">
                             <a class="section-contacts-link" href="tel:+79876543210">
@@ -262,7 +265,7 @@
                         </div>
                     </li>
                     <li class="section-contacts-item">
-                        <span class="section-contacts-icon"></span>
+                        <span class="section-contacts-icon section-contacts-icon-mail"></span>
                         <strong class="section-contacts-heading">Email Us</strong>
                         <div class="section-contacts-info">
                             <a class="section-contacts-link" href="mailto:example@example.com">
@@ -280,7 +283,7 @@
     </main>
 
     <footer class="footer">
-        <div class="conteiner">
+        <div class="conteiner footer-container">
             <div class="footer-left">
                 <a href="" class="footer-logo">
                     <img src="/img/5.8 Lionic.psd.svg" alt="logo" class="footer-logo-img">
@@ -317,17 +320,17 @@
                 <ul class="footer-social-list">
                     <li class="footer-social-item">
                         <a href="" class="footer-social-link">
-                        <span class="footer-social-icon"></span>    
+                            <span class="footer-social-icon"></span>
                         </a>
                     </li>
                     <li class="footer-social-item">
                         <a href="" class="footer-social-link">
-                        <span class="footer-social-icon"></span>    
+                            <span class="footer-social-icon"></span>
                         </a>
                     </li>
                     <li class="footer-social-item">
                         <a href="" class="footer-social-link">
-                        <span class="footer-social-icon"></span>    
+                            <span class="footer-social-icon"></span>
                         </a>
                     </li>
                 </ul>
