added fonts&modify styles.css

--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque reiciendis nam perspiciatis
                         ipsum
                     </p>
-                    <a href="" class="btn">
-                        FREE 30 DAYS TRIAL
-                    </a>
-                    <div class="section-hero-btn-description">
-                        <span class="section-hero-ssl-icon"></span>
-                        SSL SECURED CONECTED
+                    <div class="section-hero-action">
+                        <a href="" class="btn btn-big section-hero-btn">
+                            FREE 30 DAYS TRIAL
+                        </a>
+                        <div class="section-hero-btn-description">
+                            <span class="section-hero-ssl-icon"></span>
+                            SSL SECURED CONECTED
+                        </div>
                     </div>
                 </div>
             </div>
@@ -176,15 +178,15 @@
 
         <section class="section-clients">
             <div class="conteiner">
-                <h2 class="section-heading">
+                <h2 class="section-heading section-clients-heading">
                     Our Happy Clients
                 </h2>
                 <ul class="section-clients-list">
                     <li class="section-clients-item">
                         <p class="section-clients-testimonial">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error et quos molestiae
-                            cupiditate? id consequuntur aperiam, harum tempora assumenda illum unde quo
-                            laboriosam dolores natus, officiis sit ipsum!
+                            cupiditate? Possimus id consequuntur aperiam, harum tempora assumenda illum unde quo
+                            laboriosam dolores natus, quisquam!
                         </p>
                         <div class="section-clients-user">
                             <img src="/img/Place your image here.svg" alt="user" class="section-clients-avatar">
@@ -201,8 +203,7 @@
                     <li class="section-clients-item">
                         <p class="section-clients-testimonial">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error et quos molestiae
-                            cupiditate? Possimus id consequuntur aperiam, harum tempora assumenda illum unde quo
-                            laboriosam dolores natus, quisquam, officiis sit ipsum!
+                            cupiditate?
                         </p>
                         <div class="section-clients-user">
                             <img src="/img/Place your image here.svg" alt="user" class="section-clients-avatar">
@@ -219,8 +220,7 @@
                     <li class="section-clients-item">
                         <p class="section-clients-testimonial">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error et quos molestiae
-                            cupiditate? Possimus id consequuntur aperiam, harum tempora assumenda illum unde quo
-                            laboriosam dolores natus, quisquam, officiis sit ipsum!
+                            cupiditate? Possimus id consequuntur aperiam, harum tempora.
                         </p>
                         <div class="section-clients-user">
                             <img src="/img/Place your image here.svg" alt="user" class="section-clients-avatar">
